<resources>
    <string name="app_name">ProyLATV0298</string>
    <string name="titulo">GNU LINUX</string>
    <string name="imagen">gnu</string>
    <string name="tittulo2">MENU PRINCIPAL</string>
    <string name="boton1">Historia</string>
    <string name="boton2">Distribuciones</string>
    <string name="boton3">Etimologia</string>
    <string name="boton4">Empresas que patrocinan su uso</string>
    <string name="boton5">Cuota en el mercado</string>
    <string name="boton6">Aplicaciones</string>
    <string name="boton7">Implantacion</string>
    <string name="boton8">Entorno grafico</string>
    <string name="titulo3">HISTORIA</string>
    <string name="txthistoria">En 1991, con 23 años, un estudiante de informática de la Universidad de Helsinki (Finlandia) llamado Linus Torvalds se propone como entretenimiento hacer un sistema operativo que se comporte exactamente igual al sistema operativo UNIX, pero que funcione sobre cualquier ordenador compatible PC. Posteriormente Linus tuvo que poner como requisito mínimo que el ordenador tuviese un procesador i386, ya que los ordenadores con CPU más antiguas no facilitaban el desarrollo de un sistema operativo compatible con UNIX.

Un factor decisivo para el desarrollo y aceptación de Linux va a ser la gran expansión de Internet. Internet facilitó el trabajo en equipo de todos los que quisieron colaborar con Linus y fueron aportando todos los programas que vienen con UNIX. Linus no pretendía crear todos los programas que vienen con UNIX. Su objetivo fundamental era crear un núcleo del S.O. que fuera totalmente compatible con el de UNIX y que permitiera ejecutar todos los programas gratuitos compatibles UNIX desarrollados por la Free Software Foundation (fundada por Richard Stallman) que vienen con licencia GNUF.1. Esta licencia impide poner precio a los programas donados a la comunidad científica por sus propietarios (programas libres) y obliga a que si se escriben nuevos programas utilizando código de programas libres, estos sean también libres.</string>
    <string name="boton12">Menu Principal</string>
    <string name="titulo4">DISTRIBUCIONES</string>
    <string name="distribuciones">Debian, para uso general Artículo principal: Debian Debian es una distribución de GNU/Linux realizada por una comunidad de desarrolladores y usuarios. Esta asociación de personas unidas por la causa de crear un sistema operativo 100% libre se llama Proyecto Debian. Además se la considera una distribución madre, ya que a partir de Debian nacieron infinidad de distribuciones como Ubuntu o Mint entre otras.  Ubuntu, para uso general Artículo principal: Ubuntu Es una de las más utilizadas junto con Debian. Fue desarrollada y mantenida por la empresa Canonical, se orienta a usos generales y se caracteriza por su compatibilidad de software y facilidad de uso equiparable a Mac OS X o Windows. Cuenta con varias versiones, entre las que destacan: Ubuntu Desktop, Xubuntu, Lubuntu y Ubuntu Server.  Manjaro, para uso general Artículo principal: Manjaro Linux Esta distribución llegó al segundo puesto en DistroWatch, está enfocada en la facilidad de uso. Usa un modelo de desarrollo denominado rolling release o de Liberación continua.  Fedora, para estaciones de trabajo y servidores Artículo principal: Fedora (distribución Linux) Distribución para propósitos generales, que se caracteriza por ser estable y seguro, la cual es desarrollada y mantenida por la empresa Red Hat y una comunidad internacional de ingenieros, diseñadores gráficos y usuarios que informan de fallos y prueban nuevas tecnologías. Sus usos se orientan más al desarrollo de software y servidores.  OpenSUSE, para administración de sistemas y servicios Artículo principal: OpenSUSE Distribución auspiciada por SUSE Linux GmbH (una división independiente de The Attachmate Group), y AMD. Se orienta en ofrecer un sistema operativo estable, potente y administrable para usos realmente avanzados, pero con una gran facilidad para todo público en general.</string>
    <string name="boton9">Menu Principal</string>
    <string name="titulo5">ETIMOLOGÍA</string>
    <string name="titulo6"><![CDATA[El acrónimo recursivo GNU, GNU\'s Not Unix (GNU no es Unix), proviene de las herramientas básicas de sistema operativo creadas por el proyecto GNU, iniciado por Richard Stallman en 1983 y mantenido por la FSF. El nombre Linux viene del núcleo Linux, inicialmente escrito por Linus Torvalds en 1991.​  La contribución de GNU es la razón por la que existe controversia a la hora de utilizar Linux o GNU/Linux para referirse al sistema operativo formado por el sistema GNU y el núcleo Linux en su conjunto.​  El sistema operativo Unix fue concebido e implementado en 1969 en los laboratorios Bell de AT&T en los Estados Unidos por Ken Thompson, Dennis Ritchie, Douglas McIlroy, y Joe Ossanna. Por primera vez en 1971, Unix fue escrito completamente en lenguaje ensamblador, ya que era una práctica común en el momento. Más tarde, en un enfoque innovador clave en 1973, se volvió a escribir en el lenguaje de programación C por Dennis Ritchie (a excepción del núcleo y sistema I/O). La disponibilidad de un lenguaje de alto nivel para implementar Unix hizo su portabilidad a diferentes plataformas de computación más fácil; ayudando a su propagación.  Debido a un anterior caso antimonopolio que le prohibía entrar en el negocio de las computadoras, AT&T licenciaba gratuitamente el código fuente del sistema operativo para cualquier persona que lo pidiera. Como resultado, Unix creció rápidamente y llegó a ser ampliamente adoptado por las instituciones académicas y empresas. En 1984, AT&T se despojó de Bell Labs; quedando libre de la obligación legal que requería la concesión de dichas licencias.]]></string>
    <string name="button13">Menu Principal</string>
    <string name="titulo7">EMPRESAS QUE PATROCINAN SU USO</string>
    <string name="boton10">Menu Pricincipal</string>
    <string name="patrocinio">Con la adopción por numerosas empresas fabricantes, un buen número de computadoras se venden con distribuciones preinstaladas, y GNU/Linux ha comenzado a tomar su lugar en el vasto mercado de las computadoras de escritorio.  Algunas de las empresas que colaboran en la difusión de este sistema operativo ya sea trabajando en el núcleo Linux, proporcionando soluciones de software o preinstalando el sistema operativo, son: Intel, Google,BM,​ AMD, Sun Microsystems,​ Dell, Lenovo,​ Asus, ​Hewlett-Packard (HP), Silicon Graphics International (SGI), Renesas Technology,​ Fujitsu,​ Analog Devices, Freescale, VIA Technologies,​Oracle, Novell y RedHat,entre otras.​  El respaldo de compañías de software también está presente, ya que, entre otras aplicaciones, Nero, Java, Google Earth, Google Desktop, Adobe Reader, Adobe Flash, RealPlayer y Yahoo! Messenger están disponibles para GNU/Linux. Al haber software equivalente, es innecesario instalar los precisamente mencionados con anterioridad.</string>
    <string name="titulo8">CUOTA DE MERCADO</string>
    <string name="cuota">Numerosos estudios cuantitativos sobre software de código abierto están orientados a temas como la cuota de mercado y la fiabilidad, y ciertamente muchos de estos estudios examinan específicamente a GNU/Linux.​  La medición \"cuota de mercado\" puede resultar inservible ya que es un concepto basado en ventas comerciales (unidades materiales vendidas). Por otro lado Linux es utilizado frecuentemente en servidores con acceso público desde Internet por lo que la cuota de mercado es extremadamente inferior a la cuota de uso. Baste notar, p.ej, que Facebook, Gmail, LinkedIn o Yahoo funcionan sobre servidores GNU/Linux, de tal forma que cuando estamos accediendo desde un navegador ejecutándose en Windows/Mac, la aplicación real se está ejecutando en servidores Linux y los datos están almacenándose igualmente en dichos servidores.</string>
    <string name="botont">Menu Principal</string>
    <string name="boton14">Menu Principal</string>
    <string name="titulo15">APLICACIONES</string>
    <string name="boton15">Menu Principal</string>
    <string name="aplicacion">Supercomputadoras Dentro del segmento de las supercomputadoras, a noviembre de 2017, el uso de este sistema ascendió al 100% de las computadoras más potentes del mundo por su confiabilidad, seguridad y libertad para modificar el código.De acuerdo con TOP500.org, que lleva estadísticas sobre las 500 principales supercomputadoras del mundo, a noviembre de 2017: las 500 usaban una distribución basada en GNU/Linux.  GNU/Linux, además de liderar el mercado de servidores de Internet debido, entre otras cosas, a la gran cantidad de soluciones que tiene para este segmento, tiene un crecimiento progresivo en computadoras de escritorio y portátiles. Además, es el sistema base que se ha elegido para el proyecto OLPC: One Laptop Per Child.​  El CERN (Organización Europea para la Investigación Nuclear) usa Linux, primero Scientific Linux y luego crearon CCentSO (CERN CentOS), una versión de CentOS específica para las aplicaciones del CERN.​  Para saber más sobre las arquitecturas soportadas, lea el artículo \"Portabilidad del núcleo Linux y arquitecturas soportadas\".</string>
    <string name="titulo16">IMPLANTACION</string>
    <string name="boton16">Menu Principal</string>
    <string name="implantacion">Administración Pública Véase también: Software libre en la Administración Pública Hay una serie de administraciones públicas que han mostrado su apoyo al software libre, sea migrando total o parcialmente sus servidores y sistemas de escritorio, sea subvencionándolo. Como ejemplos se tiene a Alemania, Argentina, Australia, Brasil, España, Chile, China, Cuba, México, Perú, Ecuador, El Salvador, Uruguay y Venezuela.  Fuerzas Armadas El sistema operativo del General Atomics MQ-1 Predator está basado en GNU/Linux, así como el del Boeing P-8 Poseidon.</string>
    <string name="titulo17">ENTORNO GRÁFICO</string>
    <string name="boton17">Menu Principal</string>
    <string name="entorno">GNU/Linux puede funcionar tanto en entorno gráfico como en modo consola. La consola es común en distribuciones para servidores, mientras que la interfaz gráfica está orientada al usuario final tanto de hogar como empresarial. Asimismo, también existen los entornos de escritorio, que son un conjunto de programas conformado por ventanas, iconos y muchas aplicaciones que facilitan la utilización de la computadora. Los escritorios más populares en GNU/Linux son: GNOME, KDE Plasma , LXDE, LXQt, Xfce, Unity, MATE y Cinnamon.</string>
    <string name="imagen111" />
</resources>
